[gd_scene load_steps=25 format=2]

[ext_resource path="res://map/textures/objects/other/big_stump.png" type="Texture" id=1]
[ext_resource path="res://map/scenes/resources/other.gd" type="Script" id=2]
[ext_resource path="res://map/textures/objects/other/barrel_1_sh.png" type="Texture" id=3]
[ext_resource path="res://common/Shake.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/stats/stats_manager.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/textures/vfx/hoe-fx.png" type="Texture" id=6]
[ext_resource path="res://efx/resources/floaty_64.png" type="Texture" id=7]
[ext_resource path="res://efx/resources/offset_glow.png" type="Texture" id=8]

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 7
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.364621, 0.685921, 1 )
colors = PoolColorArray( 0.179321, 0, 0.441406, 1, 0.530518, 0, 0.640625, 1, 0.195313, 1, 0.98114, 1, 0.863281, 1, 0.996796, 1 )

[sub_resource type="GradientTexture" id=50]
gradient = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 12.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -100, 0 )
initial_velocity = 50.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
angle = 360.0
angle_random = 1.0
scale_random = 0.2
color_ramp = SubResource( 50 )
hue_variation = 0.01
hue_variation_random = 1.0
anim_speed = 1.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=45]
blend_mode = 1

[sub_resource type="Curve" id=46]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 9.81818 ), 0.0, 0.0, 0, 0, Vector2( 1, 360 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=51]
curve = SubResource( 46 )

[sub_resource type="Gradient" id=47]
offsets = PoolRealArray( 0, 0.191336, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=52]
gradient = SubResource( 47 )

[sub_resource type="Curve" id=48]
_data = [ Vector2( 0, 0.472727 ), 0.0, 2.25296, 0, 0, Vector2( 1, 0.440909 ), -0.818182, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=53]
curve = SubResource( 48 )

[sub_resource type="ParticlesMaterial" id=49]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
gravity = Vector3( 0, -150, 0 )
angular_velocity = 1.0
angular_velocity_random = 1.0
angular_velocity_curve = SubResource( 51 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 0.5
scale_random = 0.3
scale_curve = SubResource( 53 )
color_ramp = SubResource( 52 )

[node name="Other" type="Node2D"]
script = ExtResource( 2 )

[node name="ParticleRare" type="Particles2D" parent="."]
visible = false
material = SubResource( 5 )
position = Vector2( 0, -9 )
scale = Vector2( 0.6, 0.6 )
lifetime = 1.5
explosiveness = 0.07
fixed_fps = 17
process_material = SubResource( 7 )
texture = ExtResource( 7 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 1 )

[node name="Shake" parent="Sprite" instance=ExtResource( 4 )]

[node name="VFX_Hit" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -14 )
texture = ExtResource( 6 )
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="VFX_Hit"]
anims/RESET = SubResource( 1 )
anims/hit = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 8 )

[node name="StatsManager" parent="." instance=ExtResource( 5 )]

[node name="ParticleNormal" type="Particles2D" parent="."]
visible = false
modulate = Color( 0.3, 1.55, 3, 1 )
material = SubResource( 45 )
position = Vector2( 0, -4 )
scale = Vector2( 0.6, 0.6 )
amount = 5
fixed_fps = 17
process_material = SubResource( 49 )
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="OtherDetect" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -1, 5 )
scale = Vector2( 1.80704, 1.69606 )
polygon = PoolVector2Array( 5, 2, -6, 2, -10, 0, -12.728, -4.12721, -14.3882, -12.3816, -10, -17, -7, -21, -3, -25, 3, -25, 11.6212, -19.4569, 13.8348, -14.74, 12.728, -4.12721, 11, -1 )

[node name="LogDetect" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 32, 10, 22, 9, -5, 1, -39, -10, -42, -16, -42, -23, -39, -28, -35, -32, -29, -34, 4, -23, 39, -11, 41, -7, 39, 6, 36, 9 )

[node name="Tween" type="Tween" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
